# esp32c2-direct-boot-example

./: README.md  toolchain-rv32.cmake  utils.cmake
common/: CMakeLists.txt  romfuncs.h  soc.h  start.S  syscalls.c  wdt.c  wdt.h
examples/blink/: CMakeLists.txt  blink.c  delay.c  delay.h  gpio.c  gpio.h
examples/hello_world/: CMakeLists.txt  hello_world.c
ld/: common.ld  esp32c2.ld  romfuncs.ld
